[gd_scene load_steps=6 format=3 uid="uid://do63bkf5ncslo"]

[ext_resource type="Script" uid="uid://cwyhnadmw1oiv" path="res://battle.gd" id="1_bqai8"]
[ext_resource type="AudioStream" uid="uid://cmkpd4tps0m2a" path="res://don'tForgetToRemenber.mp3" id="2_6t8i5"]
[ext_resource type="Texture2D" uid="uid://boxpeiav72v41" path="res://Hpbar.png" id="2_7sfm4"]
[ext_resource type="Texture2D" uid="uid://dp8ettrswcx7l" path="res://icon.svg" id="2_cnxwr"]
[ext_resource type="FontFile" uid="uid://dffxvgjbulwpj" path="res://Qdbettercomicsansalternates-z8823.ttf" id="3_i431l"]

[node name="battle" type="Node2D"]
script = ExtResource("1_bqai8")

[node name="Don\'tForgetToRemenber" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6t8i5")
autoplay = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 639.0
offset_bottom = 359.0

[node name="enemyHPBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = 41.0
offset_top = 28.0
offset_right = 169.0
offset_bottom = 60.0
max_value = 20.0
value = 20.0
rounded = true
texture_progress = ExtResource("2_7sfm4")

[node name="enemyChargeBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = 249.0
offset_top = 138.0
offset_right = 377.0
offset_bottom = 170.0
value = 20.0
rounded = true
texture_progress = ExtResource("2_7sfm4")
tint_over = Color(0.9796547, 0.74454045, 0.9658639, 1)
tint_progress = Color(0.42181668, 0.6514035, 0.85754997, 1)

[node name="EnemyHPLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 17.0
offset_top = 36.0
offset_right = 57.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "HP"

[node name="EnemycooldownLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 225.0
offset_top = 145.0
offset_right = 265.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "CD"

[node name="EnemyName" type="Label" parent="UI"]
layout_mode = 0
offset_left = 44.0
offset_top = 7.0
offset_right = 106.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "yourMom"

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = -2.0
offset_top = 171.0
offset_right = 642.0
offset_bottom = 360.0

[node name="attack" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 115.0
offset_right = 149.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "attack"

[node name="Button2" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 170.0
offset_top = 117.0
offset_right = 310.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "fart"

[node name="Button3" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 329.0
offset_top = 117.0
offset_right = 469.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "fart"

[node name="kys" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 492.0
offset_top = 116.0
offset_right = 632.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "kys"

[node name="playerHPBar" type="TextureProgressBar" parent="UI/Panel"]
layout_mode = 0
offset_left = 332.0
offset_top = 154.0
offset_right = 460.0
offset_bottom = 186.0
max_value = 20.0
value = 20.0
rounded = true
texture_progress = ExtResource("2_7sfm4")

[node name="playerChargeBar" type="TextureProgressBar" parent="UI/Panel"]
layout_mode = 0
offset_left = 504.0
offset_top = 155.0
offset_right = 632.0
offset_bottom = 187.0
value = 20.0
rounded = true
texture_progress = ExtResource("2_7sfm4")
tint_over = Color(0.9796547, 0.74454045, 0.9658639, 1)
tint_progress = Color(0.42181668, 0.6514035, 0.85754997, 1)

[node name="playerHP" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 281.0
offset_top = 161.0
offset_right = 321.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "HP"

[node name="PlayerSpeed" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 473.0
offset_top = 160.0
offset_right = 500.0
offset_bottom = 183.0
theme_override_fonts/font = ExtResource("3_i431l")
text = "CD"

[node name="attackDirection" type="GridContainer" parent="UI/Panel"]
visible = false
layout_mode = 0
offset_left = 167.0
offset_top = 3.0
offset_right = 275.0
offset_bottom = 61.0
scale = Vector2(2.9433963, 1.9069767)
columns = 2

[node name="ATTACKUP" type="Button" parent="UI/Panel/attackDirection"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8865197, 0.89827347, 1, 1)
theme_override_fonts/font = ExtResource("3_i431l")
text = "UP"

[node name="ATTACKDOWN" type="Button" parent="UI/Panel/attackDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "DOWN"

[node name="ATTACKLEFT" type="Button" parent="UI/Panel/attackDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "LEFT"

[node name="ATTACKRIGHT" type="Button" parent="UI/Panel/attackDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "RIGHT"

[node name="dodgeDirection" type="GridContainer" parent="UI/Panel"]
visible = false
layout_mode = 0
offset_left = 167.0
offset_top = 3.0
offset_right = 275.0
offset_bottom = 61.0
scale = Vector2(2.9433963, 1.9069767)
columns = 2

[node name="UP" type="Button" parent="UI/Panel/dodgeDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "UP"

[node name="DOWN" type="Button" parent="UI/Panel/dodgeDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "DOWN"

[node name="LEFT" type="Button" parent="UI/Panel/dodgeDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "LEFT"

[node name="RIGHT" type="Button" parent="UI/Panel/dodgeDirection"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i431l")
text = "RIGHT"

[node name="turnIndicator" type="Label" parent="UI"]
layout_mode = 0
offset_left = 35.0
offset_top = 68.0
offset_right = 180.0
offset_bottom = 107.0

[node name="PlayerDamagetaken" type="Label" parent="UI"]
layout_mode = 0
offset_left = 388.0
offset_top = 52.999996
offset_right = 428.0
offset_bottom = 76.0
scale = Vector2(2.24, 2.04)
theme_override_colors/font_color = Color(0.89573556, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i431l")

[node name="DamageIndicatorCD" type="Timer" parent="UI/PlayerDamagetaken"]
one_shot = true

[node name="enemyDamagetaken" type="Label" parent="UI"]
layout_mode = 0
offset_left = 386.0
offset_top = 111.00001
offset_right = 392.34235
offset_bottom = 130.09247
scale = Vector2(3.6264174, 2.6188345)
theme_override_colors/font_color = Color(0.3038669, 0.38479647, 1, 1)
theme_override_fonts/font = ExtResource("3_i431l")

[node name="DamageIndicatorCD" type="Timer" parent="UI/enemyDamagetaken"]
one_shot = true

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(315, 75)
texture = ExtResource("2_cnxwr")

[connection signal="button_down" from="UI/Panel/attack" to="." method="_on_button_button_down"]
[connection signal="button_down" from="UI/Panel/attackDirection/ATTACKUP" to="." method="_on_attackup_button_down"]
[connection signal="button_down" from="UI/Panel/attackDirection/ATTACKDOWN" to="." method="_on_attackdown_button_down"]
[connection signal="button_down" from="UI/Panel/attackDirection/ATTACKLEFT" to="." method="_on_attackleft_button_down"]
[connection signal="button_down" from="UI/Panel/attackDirection/ATTACKRIGHT" to="." method="_on_attackright_button_down"]
[connection signal="button_down" from="UI/Panel/dodgeDirection/UP" to="." method="_on_up_button_down"]
[connection signal="button_down" from="UI/Panel/dodgeDirection/DOWN" to="." method="_on_down_button_down"]
[connection signal="button_down" from="UI/Panel/dodgeDirection/LEFT" to="." method="_on_left_button_down"]
[connection signal="button_down" from="UI/Panel/dodgeDirection/RIGHT" to="." method="_on_right_button_down"]
[connection signal="timeout" from="UI/PlayerDamagetaken/DamageIndicatorCD" to="." method="_on_damage_indicator_cd_timeout"]
[connection signal="timeout" from="UI/enemyDamagetaken/DamageIndicatorCD" to="." method="_on_damage_indicator_cd_timeout"]
